# dj

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE.txt  LICENSE_CECILL-C.txt  README.md  encoding_converter.py
cmake/: GNU-ARM-Toolchain.cmake  STM32MP15-Toolchain.cmake  tools.cmake
cmake/targets/: linux.cmake  stm32f4.cmake  stm32mp15.cmake  windows.cmake
linker/: stm32f407vgt.ld
results/: HONOR_MagicBook_14_wsl2_ubuntu.txt  Nvidia_Jetson_Orin_Nano_Super.txt  Particle_Tachyon.txt  RaspberryPi5_4core_8GB_Debian12.txt  STM32F407.txt  STM32MP157C-DK2.txt
src/: main.c
src/api/printf/: printf.h  printfEmpty.c  printfStm32f4.c
src/api/stm32f4/: syscalls.c  system_stm32f4xx.c
src/api/time/: time.h  timeLinux.c  timeStm32f4.c  timeWindows.c
src/dj/: README.md  dj.c  dj.h  dj_config.h  dj_playground_vizualizer.py
src/dj/dj_dependencies/: QS_macro.h  QS_magic_array.h  QS_types.h  dj_dependencies.c  dj_dependencies.h
src/dj/dj_dependencies/QS_maths/: QS_maths.c  QS_maths.h  QS_maths_angle.c  (+15 more)
src/dj/dj_graph/: dj_graph_graph.c  dj_graph_graph.h  dj_graph_link.c  dj_graph_link.h  dj_graph_node.c  dj_graph_node.h  dj_graph_path.c  dj_graph_path.h  path_duration_calculator.m
src/dj/dj_graph_builder/: dj_graph_builder.c  dj_graph_builder.h  dj_graph_rebuilder.c  dj_graph_rebuilder.h  dj_prebuilt_graph.c  dj_prebuilt_graph.h
src/dj/dj_launcher/: dj_launcher.c  dj_launcher.h
src/dj/dj_logs/: dj_logs.h  dj_time_marker.c  dj_time_marker.h
src/dj/dj_obstacle/: dj_obstacle.c  dj_obstacle.h  dj_obstacle_dynamic.c  dj_obstacle_dynamic.h  dj_obstacle_manager.c  dj_obstacle_manager.h  dj_obstacle_static.c  dj_obstacle_static.h  dj_oversize_obstacle.c  dj_oversize_obstacle.h  dj_polygon.c  dj_polygon.h
src/dj/dj_obstacle_importer/: dj_obstacle_id.c  dj_obstacle_id.h  dj_obstacle_importer.c  dj_obstacle_importer.h
src/dj/dj_prop_config/: dj_prop_config.c  dj_prop_config.h
src/dj/dj_solver/: dj_solver.c  dj_solver.h
src/dj/dj_viewer/: dj_viewer_status.c  dj_viewer_status.h
src/dj_tester/: dj_tester.c  dj_tester.h
src/dj_tester/dj_test/: dj_test.c  dj_test.h
src/dj_tester/dj_test_params/: dj_test_params.c  dj_test_params.h
src/dj_tester/dj_test_report/: dj_test_report.c  dj_test_report.h
src/dj_tester/dj_test_set/: dj_test_set.c  dj_test_set.h
src/point_generator/: point_generator.c  point_generator.h
src/pos_simulator/: pos_simulator.c  pos_simulator.h
(+7 files in other folders)
